# cleanroom-agent

./: Cargo.toml  README.md
crates/cleanroom-agent/: Cargo.toml
crates/cleanroom-agent/examples/: consistency_llm_example.rs  eval_autoagents.rs  eval_llm_loop.rs  eval_meta.rs  infer_design_decisions.rs  llm_analyze_file.rs  llm_with_memory_and_tool.rs  produce_llm.rs  reflect_example.rs
crates/cleanroom-agent/src/: absorb_human_changes.rs  agent.rs  auxiliary_hints.rs  code_merger.rs  compat_detector.rs  compat_resolver.rs  completeness.rs  consistency.rs  consistency_checker.rs  consistency_llm.rs  consumer.rs  design_decisions.rs  evaluation.rs  ir_to_sdef.rs  lib.rs  llm_loop.rs  llm_reflection.rs  llm_sdef_parser.rs  lsp_analysis.rs  mcp_tool_bridge.rs  name_resolution.rs  naming.rs  orchestrator.rs  producer.rs  producer_pipeline.rs  repo_scanner.rs  scheduler.rs  sdef_context.rs  target_manifest.rs  test_extractor.rs  two_phase_commit.rs  version_upgrade.rs
crates/cleanroom-agent/src/consumer/: code_generator.rs  verification.rs
crates/cleanroom-agent/src/consumer/code_generator/: c_gen.rs  mod.rs  rust_gen.rs  templates.rs
crates/cleanroom-agent/src/tree_sitter_parser/: mod.rs  python_parser.rs  rust_parser.rs  typescript_parser.rs
crates/cleanroom-agent/tests/: consistency_test.rs  consume_flow_test.rs  fingerprint_test.rs  llm_loop_determinism.rs  produce_flow_test.rs
crates/cleanroom-cli/: Cargo.toml
crates/cleanroom-cli/src/: main.rs  progress.rs
crates/cleanroom-cli/src/commands/: mod.rs
crates/cleanroom-db/: Cargo.toml
crates/cleanroom-db/src/: database.rs  embedded_schema.rs  error.rs  lib.rs  migrations.rs
crates/cleanroom-db/src/export_import/: export.rs  import.rs  mod.rs
crates/cleanroom-db/src/repositories/: audit_repository.rs  checkpoint_repository.rs  fingerprint_repository.rs  llm_call_log_repository.rs  mod.rs  sdef_repository.rs  shard_repository.rs  symbol_repository.rs  task_repository.rs
crates/cleanroom-db/tests/: 007_llm_task_types.rs
crates/cleanroom-figma/: Cargo.toml
crates/cleanroom-figma/src/: figma_api.rs  figma_fig.rs  figma_ir.rs  figma_to_sdef.rs  lib.rs
crates/cleanroom-i18n/locales/: en.json  zh-CN.json
crates/cleanroom-lsp/: Cargo.toml
crates/cleanroom-lsp/src/: error.rs  file_analysis.rs  language_detection.rs  lib.rs  server_pool.rs
crates/cleanroom-mcp/: Cargo.toml
crates/cleanroom-mcp/src/: lib.rs
crates/cleanroom-mcp/src/tools/: compat_tools.rs  consistency_tools.rs  import_export_tools.rs  lsp_tools.rs  mod.rs  naming_tools.rs  sdef_tools.rs  skill_tools.rs  task_tools.rs
crates/cleanroom-mcp/tests/: mcp_redis_test.rs
crates/cleanroom-meta/: Cargo.toml
crates/cleanroom-meta-core/: Cargo.toml
crates/cleanroom-meta-core/src/: environment.rs  error.rs  event_fanout.rs
crates/cleanroom-meta-core/src/agent/: actor.rs  base.rs  builder.rs  config.rs  context.rs  direct.rs  error.rs  hooks.rs  mod.rs  output.rs  protocol.rs  state.rs  task.rs
crates/cleanroom-meta-core/src/agent/executor/: event_helper.rs  memory_helper.rs  memory_policy.rs  mod.rs  tool_processor.rs  turn_engine.rs
crates/cleanroom-meta-core/src/agent/memory/: mod.rs  sliding_window.rs
crates/cleanroom-meta-core/src/agent/prebuilt/executor/: basic.rs  mod.rs  react.rs
crates/cleanroom-meta-core/src/embeddings/: mod.rs
crates/cleanroom-meta-core/src/runtime/: manager.rs  mod.rs  single_threaded.rs
crates/cleanroom-meta-core/src/tests/: mod.rs
crates/cleanroom-meta-core/src/tool/: mod.rs
crates/cleanroom-meta-core/src/vector_store/: in_memory_store.rs  mod.rs
crates/cleanroom-meta-derive/: Cargo.toml
crates/cleanroom-meta-derive/src/: lib.rs
crates/cleanroom-meta-derive/src/agent/: mod.rs  output.rs
crates/cleanroom-meta-derive/src/tool/: mod.rs
crates/cleanroom-meta-llm/: Cargo.toml
crates/cleanroom-meta-llm/src/: builder.rs  error.rs  lib.rs  protocol.rs
crates/cleanroom-meta-llm/src/backends/: anthropic.rs  minimax.rs  mod.rs  openai.rs
crates/cleanroom-meta-llm/src/chat/: mod.rs
crates/cleanroom-meta-llm/src/completion/: mod.rs
crates/cleanroom-meta-llm/src/embedding/: mod.rs  model_provider.rs
crates/cleanroom-meta-llm/src/evaluator/: mod.rs  parallel.rs  parallel_tests.rs
crates/cleanroom-meta-llm/src/models/: mod.rs
crates/cleanroom-meta-llm/src/optim/: cache.rs  fallback.rs  retry.rs
crates/cleanroom-meta-llm/src/pipeline/: mod.rs
crates/cleanroom-meta-llm/src/providers/: openai_compatible.rs
crates/cleanroom-meta-protocol/: Cargo.toml
crates/cleanroom-meta-protocol/src/: lib.rs  protocol.rs  task.rs
crates/cleanroom-meta/src/: lib.rs
crates/cleanroom-meta/tests/: async_trait_reexport.rs
crates/cleanroom-sketch/: Cargo.toml
crates/cleanroom-sketch/src/: lib.rs  sketch_api.rs  sketch_ir.rs  sketch_to_sdef.rs  sketch_zip.rs
crates/cleanroom-skill/: Cargo.toml
crates/cleanroom-skill/examples/: discover_skills.rs  select_topk.rs
crates/cleanroom-skill/src/: coordinator.rs  db_cache.rs  discovery.rs  error.rs  index.rs  injector.rs  lib.rs  model.rs  parser.rs  sdef_bridge.rs  select.rs  staging_bridge.rs  validation.rs
crates/cleanroom-skill/tests/: end_to_end.rs
crates/cleanroom-staging/: Cargo.toml
crates/cleanroom-staging/src/: error.rs  git_worktree.rs  lib.rs  manifest.rs  tempdir.rs  workspace.rs
crates/cleanroom-staging/tests/: end_to_end.rs
crates/sdef-core/src/: lib.rs  validator.rs
crates/sdef-core/src/types/: behavior.rs  contracts.rs  data_model.rs  mod.rs  reconstruction_policy.rs  root.rs  ui.rs  ui_figma.rs
migrations/: 001_initial_schema.sql  007_llm_task_types.sql  008_llm_call_log.sql  009_llm_call_log_memory.sql  010_skill_index.sql  011_staging_manifest.sql  012_fingerprints_llm_explanation.sql  013_design_decisions_module_name.sql
tests/fixtures/multi-version/: v1.json  v2.json  v3.json
