[workspace]
resolver = "2"
members = [
    "crates/sdef-core",
    "crates/cleanroom-db",
    "crates/cleanroom-mcp",
    "crates/cleanroom-lsp",
    "crates/cleanroom-agent",
    "crates/cleanroom-cli",
    "crates/cleanroom-i18n",
    "crates/cleanroom-prompt",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled", "column_decltype", "vtab", "array", "backup"] }

# MCP SDK (official: https://github.com/modelcontextprotocol/rust-sdk)
rmcp = { version = "1.7", features = ["server", "macros"] }
rmcp-macros = "1.7"
schemars = "0.8"

# Agent Framework — autoagents 0.3.7(Phase 0 评估后选定的)
# - 唯一能跟 MiniMax-M3 (Anthropic 兼容 + OpenAI 兼容)端到端通讯的 Rust framework
# - rig 的 Anthropic provider 把 URL hardcode 到 api.anthropic.com,且 OpenAI 反序列化
#   跟 MiniMax 响应不完全兼容(JSON "null vs expected sequence")
# - autoagents 的 OpenAI provider 接受 base_url override,2.5s 实测端到端通
# - 配套有 BasicAgent + AgentBuilder 高层 API、ReAct executor、tool calling、structured output
# features: openai 走 OpenAI 兼容协议,minimax 走其自家 provider(虽然示例用老域名,
# 但 base_url 可 override),anthropic 备用,logging 看请求细节
autoagents = { version = "0.3.7", features = ["openai", "minimax", "anthropic", "logging"], default-features = false }

# 之前评估的另外 2 个候选 — 已淘汰,不再作为依赖
# adk-rust: 0.9.1 ThinkingBlock.signature 字段缺 #[serde(default)],MiniMax 流式响应失败
# rig-core 0.37: Anthropic provider URL hardcode + OpenAI provider 跟 MiniMax 响应不兼容
# anda_engine 0.12: ICP / TEE 依赖过重,不适合我们的场景

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# LSP
lsp-types = "0.97"
lsp-server = "0.7"

# Code Analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-php = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-toml-ng = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
regex = "1"
glob = "0.3"
ignore = "0.4"
indicatif = "0.17"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cleanroom-agent/cleanroom-agent"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
