[package]
name = "cleanroom-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-db = { path = "../cleanroom-db" }
cleanroom-lsp = { path = "../cleanroom-lsp" }
sdef-core = { path = "../sdef-core" }
adk-rust.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
