[package]
name = "cleanroom-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-db = { path = "../cleanroom-db" }
cleanroom-lsp = { path = "../cleanroom-lsp" }
cleanroom-prompt = { path = "../cleanroom-prompt" }
sdef-core = { path = "../sdef-core" }
# LLM agent framework — 唯一选定的 autoagents
autoagents.workspace = true
# `#[agent]` proc macro used by `llm_loop::run_loop_via_basic_agent`
autoagents-derive.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-php.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true
tree-sitter-yaml.workspace = true

[dev-dependencies]
# examples 不需要再带 — autoagents 已经是主依赖
