[package]
name = "cleanroom-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-db = { path = "../cleanroom-db" }
cleanroom-lsp = { path = "../cleanroom-lsp" }
cleanroom-prompt = { path = "../cleanroom-prompt" }
cleanroom-skill = { path = "../cleanroom-skill" }
sdef-core = { path = "../sdef-core" }
# LLM agent framework — vendored autoagents fork (cleanroom-meta-*). All 5
# crates are in the workspace; we depend on them by path here. The `cleanroom-meta`
# facade is required by the `#[derive(MetaHooks)]` / `#[meta_agent]` proc
# macros, which generate `::cleanroom_meta::async_trait` / `::cleanroom_meta::core::*`
# paths and need a crate at that name to resolve against.
cleanroom-meta.workspace = true
cleanroom-meta-protocol.workspace = true
cleanroom-meta-llm.workspace = true
cleanroom-meta-derive.workspace = true
cleanroom-meta-core.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true
glob.workspace = true
ignore.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-php.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true
tree-sitter-yaml.workspace = true

[dev-dependencies]
# tests + examples need a file-based DB to exercise migrations (the in-memory
# constructor only applies 001_initial_schema.sql, which predates the LLM
# task types). Examples also need a tempdir to stage a sample source repo.
tempfile = "3"
