[package]
name = "cleanroom-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdef-core = { path = "../sdef-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
