[package]
name = "cleanroom-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdef-core = { path = "../sdef-core" }
lsp-types.workspace = true
lsp-server.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tempfile.workspace = true
lazy_static = "1.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
