[package]
name = "cleanroom-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-db = { path = "../cleanroom-db" }
sdef-core = { path = "../sdef-core" }
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
