[package]
name = "cleanroom-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-agent = { path = "../cleanroom-agent" }
cleanroom-db = { path = "../cleanroom-db" }
cleanroom-i18n = { path = "../cleanroom-i18n" }
cleanroom-lsp = { path = "../cleanroom-lsp" }
sdef-core = { path = "../sdef-core" }
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
