[package]
name = "cleanroom-meta-derive"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Procedural macros for the Cleanroom Meta agent framework. Vendored fork of autoagents-derive."
readme = false

[lib]
name = "cleanroom_meta_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.28", features = ["derive", "strum_macros"] }
syn = { version = "2", features = ["full"] }
