[package]
name = "cleanroom-meta-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core protocol types for the Cleanroom Meta agent framework (event, task, tool, llm). Vendored fork of autoagents-protocol."
readme = false

[lib]
name = "cleanroom_meta_protocol"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
